Moving between computers

--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -1,44 +1,10 @@
 /* @import 'https://fonts.googleapis.com/icon?family=Material+Icons'; */
 
 :root {
-	/* Material Design Defaults:
-		--primary: #d0bcff;
-		--primary-container: #4f378b;
-		--secondary: #ccc2dc;
-		--secondary-container: #4a4458;
-		--tertiary: #efb8c8;
-		--tertiary-container: #633b48;
-		--surface: #1c1b1f;
-		--surface-variant: #49454f;
-		--background: #1c1b1f;
-		--error: #f2b8b5;
-		--error-container: #8c1d18;
-		--on-primary: #371e73;
-		--on-primary-container: #eaddff;
-		--on-secondary: #332d41;
-		--on-secondary-container: #e8def8;
-		--on-tertiary: #492532;
-		--on-tertiary-container: #ffd8e4;
-		--on-surface: #e6e1e5;
-		--on-surface-variant: #cac4d0;
-		--on-error: #601410;
-		--on-error-container: #f9dedc;
-		--on-background: #e6e1e5;
-		--outline: #938f99;
-		--outline-variant: #444746;
-		--shadow: #000000;
-		--surface-tint-color: #d0bcff;
-		--inverse-surface: #e6e1e5;
-		--inverse-on-surface: #313033;
-		--inverse-primary: #6750a4;
-		--scrim: #000000; */
+	--padding: 4vw;
 
-	--padding: 2rem;
-	--font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
-		'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-		sans-serif;
-
-	--navbar-height: 48px;
+	--navbar-height: 5rem;
+	--footer-height: 10rem;
 
 	--on-background: #fafdff;
 
@@ -65,10 +31,8 @@
 	--divider-variant: rgba(255, 255, 255, 0.08);
 
 	color-scheme: dark;
-	font-family: var(--font-family);
-	font-size: 16px;
+	font-family: sans-serif;
 	color: var(--on-background);
-	line-height: 1.35;
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
